# assdraw

./: BUILD_TEST.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.tr.md  i18n_setup.py  index.html  installer.iss  meson.build  setup.iss  vcpkg.json
.github/workflows/: b.yml  build.yml  hugo.yml  i18n-automation.yml  test.yml
cmake/: x64-windows-release.cmake  x64-windows.cmake  x86-windows-release.cmake  x86-windows.cmake
po/: assdraw.pot  de.po  en.po  es.po  fr.po  tr.po  vi.po  zh_TW.po
src/: _common.hpp  assdraw.cpp  assdraw.hpp  assdraw.rc  canvas.cpp  canvas.hpp  canvas_mouse.cpp  canvas_mouse.hpp  cmd.cpp  dlgctrl.cpp  dlgctrl.hpp  dpi_aware.manifest  engine.cpp  engine.hpp  include_once.hpp  library.cpp  library.hpp  settings.cpp  settings.hpp
src/xpm/: res.h
